Bug 216154 Anchors in e-mails are broken p=andreas.otte@debitel.net r=bienvenu sr=bz